--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -1,45 +1,52 @@
-name: Build
-
+name: "build-test-dev"
 on:
+  pull_request:
+    branches:
+      - dev
+    paths-ignore:
+      - '*.md'
   push:
     branches:
       - dev
+  
+
 jobs:
   build:
-    name: Build and analyze
     runs-on: windows-latest
-    
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17
-      - name: Cache SonarQube packages
-        uses: actions/cache@v1
-        with:
-          path: ~\.sonar\cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache SonarQube scanner
-        id: cache-sonar-scanner
-        uses: actions/cache@v1
-        with:
-          path: .\.sonar\scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
-      - name: Install SonarQube scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell: powershell
-        run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-      - name: Build and analyze
-        shell: powershell
-        run: |
-          "C:\Program Files\Sonar\sonar-scanner-8.0.1.97834-net-framework\SonarScanner.MSBuild.exe"  begin /k:"Test-organization-for-sonnar_TestSonar_7140f900-8419-42f6-a127-3c04c09d07e6" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
-     
-        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MsBuild.exe" /t:Rebuild
-          "C:\Program Files\Sonar\sonar-scanner-8.0.1.97834-net-framework\SonarScanner.MSBuild.exe" end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+    - uses: actions/checkout@v4
+
+    - name: Setup MSBuild (vswhere-path)
+      id: setup_msbuild_explicit
+      uses: ./
+      with:
+        vswhere-path: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin
+
+    - name: Setup MSBuild (PATH)
+      id: setup_msbuild_path
+      uses: ./
+
+    - name: Setup MSBuild (fallback)
+      id: setup_msbuild_fallback
+      uses: ./
+      env:
+        PATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin
+
+    - name: Setup MSBuild (x64)
+      if: always()
+      id: setup_msbuild_path_x64
+      uses: ./
+      with:
+        vs-prerelease: true
+        msbuild-architecture: 'x64'
+
+
+    - name: echo msbuild path
+      run: |
+        echo "vswhere-path: ${{ steps.setup_msbuild_explicit.outputs.msbuildPath }}"
+        echo "PATH: ${{ steps.setup_msbuild_path.outputs.msbuildPath }}"
+        echo "ARM PATH: ${{ steps.setup_msbuild_path_x64.outputs.msbuildPath }}"
+        echo "Fallback: ${{ steps.setup_msbuild_fallback.outputs.msbuildPath }}"
+
+    - name: echo MSBuild
+      run: msbuild -version
