--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -72,8 +72,9 @@ jobs:
 
       - name: Add msbuild to PATH
 
-        uses: microsoft/setup-msbuild@v1.0.1
-
+        uses: microsoft/setup-msbuild@v2     
+        with:
+          vswhere-path: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin'
       - name: Build and analyze
 
         shell: powershell
