--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -72,9 +72,11 @@ jobs:
 
       - name: Add msbuild to PATH
 
-        uses: microsoft/setup-msbuild@v2     
+        uses: microsoft/setup-msbuild@v1.0.1     
         with:
-          vswhere-path: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MsBuild.exe'
+          vswhere-path: 'C:\Program Files (x86)\Microsoft Visual Studio\Installer'  
+
+
       - name: Build and analyze
 
         shell: powershell
