--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -72,10 +72,11 @@ jobs:
 
       - name: Add msbuild to PATH
 
-        uses: microsoft/setup-msbuild@v16.11.2.50704    
+        uses: microsoft/setup-msbuild@v1.3.3 
         with:
           vswhere-path: 'C:\Program Files (x86)\Microsoft Visual Studio\Installer'  
-
+          vs-version : 2019
+          msbuild-architecture: x64
 
       - name: Build and analyze
 
