--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -35,12 +35,18 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-      - name: Setup Nuget
-        uses: Nuget/setup-nuget@v1.0.5
-      - name: Restore nuget packages
-        run: nuget restore **.sln
-      - name: Add msbuild to PATH
-        uses: microsoft/setup-msbuild@v1.1
+    
+  
+      - name: Setup MSBuild path  
+        uses: microsoft/setup-msbuild@v1.0.2  
+  
+      - name: Setup NuGet  
+        uses: NuGet/setup-nuget@v1.0.5  
+  
+      - name: Restore NuGet packages  
+        run: nuget restore -ConfigFile 'nuget.config' 
+
+        
       - name: Build and analyze
 
         shell: powershell
