--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -44,7 +44,7 @@ jobs:
         uses: NuGet/setup-nuget@v1.0.5  
   
       - name: Restore NuGet packages  
-        run: nuget restore -ConfigFile 'nuget.config' 
+        run: nuget restore -ConfigFile 'packages.config' 
 
         
       - name: Build and analyze
