--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -40,6 +40,12 @@ jobs:
       - name: Setup MSBuild path  
         uses: microsoft/setup-msbuild@v1.0.2  
         
+      - name: Setup NuGet  
+        uses: NuGet/setup-nuget@v1.0.5  
+  
+      - name: Restore NuGet packages  
+        run: nuget restore -ConfigFile 'packages.config'  
+        
       - name: Build and analyze
 
         shell: powershell
