--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -39,12 +39,13 @@ jobs:
   
       - name: Setup MSBuild path  
         uses: microsoft/setup-msbuild@v1.0.2  
-        
-      - name: Setup NuGet  
-        uses: NuGet/setup-nuget@v1.0.5  
-  
-      - name: Restore NuGet packages  
-        run: nuget restore -ConfigFile 'packages.config'  
+
+      - name: restore-nuget-packages
+  # You may pin to the exact commit or the version.
+  # uses: IT-Service/restore-nuget-packages@3d9f4bfad52d4376730fc953b3e00945c9f1cb1c
+        uses: IT-Service/restore-nuget-packages@v1.0.2
+
+
         
       - name: Build and analyze
 
