--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -40,10 +40,11 @@ jobs:
       - name: Setup MSBuild path  
         uses: microsoft/setup-msbuild@v1.0.2  
 
-      - name: restore-nuget-packages
-  # You may pin to the exact commit or the version.
-  # uses: IT-Service/restore-nuget-packages@3d9f4bfad52d4376730fc953b3e00945c9f1cb1c
-        uses: IT-Service/restore-nuget-packages@v1.0.2
+      - name: Restore NuGet packages for XSLT processing
+        uses: IT-Service/restore-nuget-packages@v1
+        with:
+          packages-config-path: TestSonar/TestSonar/packages.config
+          packages-directory-path: TestSonar/TestSonar
 
 
         
