--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -47,13 +47,22 @@ jobs:
           packages-directory-path: TestSonar
 
 
-        
+      - name: echo msbuild path
+        run: |
+          echo "vswhere-path: ${{ steps.setup_msbuild_explicit.outputs.msbuildPath }}"
+          echo "PATH: ${{ steps.setup_msbuild_path.outputs.msbuildPath }}"
+          echo "ARM PATH: ${{ steps.setup_msbuild_path_arm.outputs.msbuildPath }}"
+          echo "ARM PATH: ${{ steps.setup_msbuild_path_x64.outputs.msbuildPath }}"
+          echo "Fallback: ${{ steps.setup_msbuild_fallback.outputs.msbuildPath }}"
+
+      - name: echo MSBuild
+        run: msbuild -version
       - name: Build and analyze
 
         shell: powershell
         run: |
           SonarScanner.MSBuild.exe begin /k:"Test-organization-for-sonnar_TestSonar_098304cf-334a-475a-9d9a-153402416f3f" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="http://localhost:9000"
-          MSBuild.exe /k:"Test-organization-for-sonnar_TestSonar_098304cf-334a-475a-9d9a-153402416f3f" /t:Rebuild
+          msbuild /k:"Test-organization-for-sonnar_TestSonar_098304cf-334a-475a-9d9a-153402416f3f" /t:Rebuild
           SonarScanner.MSBuild.exe end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
           
 
