--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,6 @@ jobs:
       - name: Build and analyze
         shell: powershell
         run: |
-          "C:\Program Files\Sonar\sonar-scanner-8.0.1.97834-net-framework\SonarScanner.MSBuild.exe" begin /k:"Test-organization-for-sonnar_TestSonar_098304cf-334a-475a-9d9a-153402416f3f" /d:sonar.host.url="http://localhost:9000" /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
-
-        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MsBuild.exe" /t:Rebuild
-
-"        C:\Program Files\Sonar\sonar-scanner-8.0.1.97834-net-framework\SonarScanner.MSBuild.exe end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
-
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"Test-organization-for-sonnar_TestSonar_098304cf-334a-475a-9d9a-153402416f3f" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
+          dotnet build
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
